fdo#58577 DOCX export: handle multiple textframes anchored to the same para

Also fixes ~SwIndexReg assertion on closing the document.

Change-Id: I7c1a9d3d646f2dacdbced2af355c076c1a1063ec